refactor: rearrange response body
